<resources>

    <string name="app_name">CardsUI Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">CardsUI</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
	<string name="overflow">Menu Overflow</string>
	<string name="color_stripe">Color Stripe</string>
	<string name="enter_color">Enter the hex value of a color</string>
	<string name="new_card">Create a New Card</string>
	<string name="new_card_subtitle">Tap here to select all the parameters for your new card</string>
	<string name="card_title">Card Title</string>
	<string name="stack_title">Stack Title</string>
	<string name="card_desc">Card Description</string>
	<string name="title_color">Title Color</string>
	<string name="stripe_color">Stripe Color</string>
	<string name="overflow">Menu Overflow</string>
	<string name="clickable">Clickable</string>
	<string name="create_card">Create Card</string>
	<string name="to_last_stack">Add to last stack</string>
	
	<string-array name="cards_type_array">
        <item>Google Play Card</item>
        <item>Google Now Card</item>
        <item>Google Now Image Card</item>
        <item>Stack</item>
    </string-array>
	

</resources>